# wordcount

./: Cargo.toml  README.md  appveyor.yml
src/: lib.rs  main.rs
tests/: char.rs  line.rs
tests/utils/: mod.rs
