[package]
name = "bicycle-book-wordcount"
version = "0.1.0"
authors = ["noimin0610 <mii.informationsystems@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "シンプルな文字，単語，行の出現頻度の計測機能を提供します．"
readme = "README.md"
repository = "https://github.com/noimin0610/wordcount"
categories = ["command-line-utilities"]
keywords = ["example", "frequency", "text"]
exclude = ["text.txt", "tests/*"]

[badges]
appveyor = { repository = "noimin0610/wordcount" }
travis-ci = { repository = "noimin0610/word_count" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
